# customer-journey-graphrag

./: .env.example  .gitignore  Dockerfile  GovindArunNampoothiri_CV_Chennai.txt  README.md  README_DEPLOYMENT.md  README_HFSpaces.md  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
data/: .gitkeep
docs/: query_results.md
graph/: .gitkeep
src/: __init__.py  api.py  app.py  build_graph.py  generate_data.py  llm.py  naive_rag.py  retrieval.py
tests/: test_retrieval.py
